--- a/mobile/templates/child.html
+++ b/mobile/templates/child.html
@@ -2,6 +2,7 @@
 {% load static mobile-components %}
 {% comment %} Object is child model {% endcomment %}
 {% block page %}
+  {% include 'babybuddy/messages.html' %}
   <div class="background"></div>
   <div class="page-container">
     <div class="header-container">
