feat: create fieldset implementation
In order to have more control and flexiability on how elements are
rendered create field set implementation.

every field set gets rendered in order, and uses the template specified.

This should probably be built into the metaclass of the form but i have
no idea how to do that.

--- a/babybuddy/templates/babybuddy/form.html
+++ b/babybuddy/templates/babybuddy/form.html
@@ -4,10 +4,18 @@
 <div class="container-fluid pb-5">
     <form role="form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {% for field in form %}
-            {{ field.widget }}
-            <div class="row">{% include 'babybuddy/form_field.html' %}</div>
-        {% endfor %}
+        {% if form.fieldsets %}
+            {% for fieldset in form.hydrated_fielsets %}
+                {% with "forms/layouts/"|add:fieldset.layout|add:".html" as template %}
+                    {% include template %}
+                {% endwith %}
+            {% endfor %}
+        {% else %}
+            {% for field in form %}
+                {{ field.widget }}
+                <div class="row">{% include 'babybuddy/form_field.html' %}</div>
+            {% endfor %}
+        {% endif %}
         <button type="submit" class="submit-primary btn btn-primary btn-lg">{% trans "Submit" %}</button>
     </form>
 </div>
