feat: add links for bottle feeding (#764)
Co-authored-by: Christopher C. Wells <git-2022@chris-wells.net>

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -49,6 +49,10 @@
             <i class="icon-feeding" aria-hidden="true"></i>
             {% trans "Feeding" %}
         </a>
+        <a class="dropdown-item p-2" href="{% url 'core:bottle-feeding-add' %}">
+            <i class="icon-feeding" aria-hidden="true"></i>
+            {% trans "Bottle Feeding" %}
+        </a>
     {% endif %}
     {% if perms.core.add_pumping %}
         <a class="dropdown-item p-2" href="{% url 'core:pumping-add' %}">
