--- a/babybuddy/static_src/scss/forms.scss
+++ b/babybuddy/static_src/scss/forms.scss
@@ -53,7 +53,17 @@
     }
 }
 
-form .row details {
+@include media-breakpoint-down(md) {
+    .advanced-fields__summary {
+        text-align: center;
+    }
+}
+
+.advanced-fields__summary > * {
+    display: inline
+}
+
+.advanced-fields {
     // removing this causes slight mis-alignment between fields in the details and the rest of the fields 
     //on the form at the left hand side of the box
     padding-right: 0;
