--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -44,22 +44,6 @@
         <script src="{% static "babybuddy/js/vendor.js" %}"></script>
         <script src="{% static "babybuddy/js/app.js" %}"></script>
         {% if user.is_authenticated %}<script>BabyBuddy.PullToRefresh.init()</script>{% endif %}
-        {% block javascript %}
-            <script type="application/javascript">
-                function rememberAdvancedToggle(event, element){
-                    localStorage.setItem("advancedForm",event.newState)
-                }
-
-                window.addEventListener('load', function () {
-                    if(localStorage.getItem("advancedForm") !== "open"){
-                        return;
-                    }
-
-                    document.querySelectorAll("form details").forEach(function(node){
-                        node.open = true
-                    });
-                })
-            </script>
-        {% endblock %}
+        {% block javascript %}{% endblock %}
     </body>
 </html>
