--- a/core/templates/forms/layouts/advanced.html
+++ b/core/templates/forms/layouts/advanced.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 <div class="row">
     <div class="row mb-3">
-        <details ontoggle="rememberAdvancedToggle(event)" class="advanced-fields">
+        <details ontoggle="BabyBuddy.RememberAdvancedToggle(event)"
+                 class="advanced-fields">
             <summary class="advanced-fields__summary">
                 <h4>{% trans "Advanced Fields" %}</h4>
             </summary>
