--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -23,26 +23,31 @@
                 <a class="card bg-dark"
                    href="{% url 'core:diaperchange-update' change.id %}">
                     <div class="card-body">
-                        <div class="card-body__primary-details">
-                            <h5>
-                                {% if change.wet and change.solid %}
-                                    {% trans "Mixed" %}
-                                {% elif change.wet %}
-                                    {% trans "Wet" %}
-                                {% elif change.solid %}
-                                    {% trans "Solid" %}
-                                {% else %}
-                                    {% trans "Clean" %}
-                                {% endif %}
-                            </h5>
-                            <h5>{{ change.color|capfirst }}</h5>
-                        </div>
-                        <div class="card-body__secondary-details">
-                            <div class="card-body__secondary-details--anchor-left">
-                                <span>{{ change.time|datetime_short }}</span>
-                            </div>
-                            <div class="card-body__secondary-details--anchor-right">
-                                {% include "core/render_tag_list.html" with tags=change.tags.all %}
+                        <div class="card_body__avatar-layout">
+                            <div class="avatar-layout__avatar">{% include "core/child_thumbnail.html" with child=change.child %}</div>
+                            <div class="avatar-layout__details">
+                                <div class="card-body__primary-details">
+                                    <h5>
+                                        {% if change.wet and change.solid %}
+                                            {% trans "Mixed" %}
+                                        {% elif change.wet %}
+                                            {% trans "Wet" %}
+                                        {% elif change.solid %}
+                                            {% trans "Solid" %}
+                                        {% else %}
+                                            {% trans "Clean" %}
+                                        {% endif %}
+                                    </h5>
+                                    <h5>{{ change.color|capfirst }}</h5>
+                                </div>
+                                <div class="card-body__secondary-details">
+                                    <div class="card-body__secondary-details--anchor-left">
+                                        <span>{{ change.time|datetime_short }}</span>
+                                    </div>
+                                    <div class="card-body__secondary-details--anchor-right">
+                                        {% include "core/render_tag_list.html" with tags=change.tags.all %}
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
