--- a/babybuddy/static_src/scss/forms.scss
+++ b/babybuddy/static_src/scss/forms.scss
@@ -33,6 +33,20 @@
     z-index: 1030;
 }
 
+.pill-container {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    row-gap: 10px;
+}
+
+// Only grow pill buttons on when using a mobile
+@include media-breakpoint-down(sm) {
+    .pill-container>label {
+            flex-grow: 1;
+        }
+}
+
 // Tweak padding on form field help blocks.
 .help-block {
     ul {
