add feeding method history

--- a/dashboard/static_src/scss/cards.scss
+++ b/dashboard/static_src/scss/cards.scss
@@ -73,6 +73,10 @@
             font-size: 2em;
         }
     }
+
+    .progress {
+        height: $progress-height * 2;
+    }
 }
 
 .card-sleep {
