--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -26,6 +26,7 @@
         <div class="col-sm-6 col-lg-4">{% card_sleep_naps_day object %}</div>
         <div class="col-sm-6 col-lg-4">{% card_tummytime_day object %}</div>
         <div class="col-sm-6 col-lg-4">{% card_diaperchange_types object %}</div>
+        <div class="col-sm-6 col-lg-4">{% card_feeding_methods object %}</div>
     </div>
 {% endblock %}
 {% block javascript %}
