--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -17,49 +17,7 @@
         {% endif %}
     </h1>
     {% include 'babybuddy/filter.html' %}
-    <div class="mobile-list">
-        {% for change in object_list %}
-            <div class="row">
-                <a class="card bg-dark"
-                   href="{% url 'core:diaperchange-update' change.id %}">
-                    <div class="card-body">
-                        <div class="card_body__avatar-layout {% if change.notes %}card_body__avatar-layout--with-notes{% endif %}">
-                            <div class="avatar-layout__avatar">{% include "core/child_thumbnail.html" with child=change.child %}</div>
-                            <div class="avatar-layout__details">
-                                <div class="card-body__primary-details">
-                                    <h5>
-                                        {% if change.wet and change.solid %}
-                                            {% trans "Mixed" %}
-                                        {% elif change.wet %}
-                                            {% trans "Wet" %}
-                                        {% elif change.solid %}
-                                            {% trans "Solid" %}
-                                        {% else %}
-                                            {% trans "Clean" %}
-                                        {% endif %}
-                                    </h5>
-                                    <h5>{{ change.color|capfirst }}</h5>
-                                </div>
-                                <div class="card-body__secondary-details">
-                                    <div class="card-body__secondary-details--anchor-left">
-                                        <span>{{ change.time|datetime_short }}</span>
-                                    </div>
-                                    <div class="card-body__secondary-details--anchor-right">
-                                        {% include "core/render_tag_list.html" with tags=change.tags.all %}
-                                    </div>
-                                </div>
-                                {% if change.notes %}
-                                    <div class="card-body__notes">
-                                        <i class="icon-note me-2" aria-hidden="true"></i>{{ change.notes }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        {% endfor %}
-    </div>
+    {% include "mobile/base/list.html" with list_item_template="mobile/diaper_list_item.html" object_list=object_list %}
     <div class="table-responsive">
         <table class="table table-instances table-borderless table-striped table-hover align-middle">
             <thead>
