feat: added mobile lists for tummy/sleep/pumping
Sleep only shows duration
  1. if duration is 0minutes it displays nothing
  2. we can add nap+icon on the right side might need to decrease font
     size due to content length

Tummy time
  1. I did not add milestone, perhaps this we can see if anyone requests
     it later. as it is a free form text field it coudl be complicated

Pumping time was pretty straight foward amount and duration.

Most models have a start and end time. where as daipers have only time.
modified the base template to show start if time is null

--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -15,6 +15,7 @@
         {% endif %}
     </h1>
     {% include 'babybuddy/filter.html' %}
+    {% include "mobile/base/list.html" with list_item_template="mobile/tummytime_list_item.html" object_list=object_list %}
     <div class="table-responsive">
         <table class="table table-instances table-borderless table-striped table-hover align-middle">
             <thead>
