--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -19,22 +19,16 @@
         <table class="table table-instances table-borderless table-striped table-hover align-middle">
             <thead>
                 <tr>
+                    <th>Actions</th>
                     <th>{% trans "Name" %}</th>
                     <th>{% trans "Color" %}</th>
+                    <th>{% trans "Items Tagged" %}</th>
                     <th>{% trans "Last Used" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for tag in object_list %}
                     <tr>
-                        <td>{{ tag.name }}</td>
-                        <td>
-                            <span class="badge badge-pill"
-                                  style="background-color:{{ tag.color }};
-                                         margin-right: .25rem">&nbsp;</span>
-                            <span class="font-monospace">{{ tag.color }}</span>
-                        </td>
-                        <td>{{ tag.last_used }}</td>
                         <td>
                             <div class="btn-group btn-group-sm"
                                  role="group"
@@ -51,6 +45,15 @@
                                 {% endif %}
                             </div>
                         </td>
+                        <td>{{ tag.name }}</td>
+                        <td>
+                            <span class="badge badge-pill"
+                                  style="background-color:{{ tag.color }};
+                                         margin-right: .25rem">&nbsp;</span>
+                            <span class="font-monospace">{{ tag.color }}</span>
+                        </td>
+                        <td>{{ tag.core_tagged_items__count }}</td>
+                        <td>{{ tag.last_used }}</td>
                     </tr>
                 {% empty %}
                     <tr>
