Update breadcrumb copy & URL

--- a/core/templates/core/tag_form.html
+++ b/core/templates/core/tag_form.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block breadcrumbs %}
     <li class="breadcrumb-item">
-        <a href="{% url 'core:sleep-list' %}">{% trans "Tag" %}</a>
+        <a href="{% url 'core:tag-list' %}">{% trans "Tags" %}</a>
     </li>
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
