--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -21,8 +21,8 @@
                 <tr>
                     <th>Actions</th>
                     <th>{% trans "Name" %}</th>
-                    <th>{% trans "Color" %}</th>
-                    <th>{% trans "Items Tagged" %}</th>
+                    <th class="text-center">{% trans "Color" %}</th>
+                    <th class="text-center">{% trans "Items Tagged" %}</th>
                     <th>{% trans "Last Used" %}</th>
                 </tr>
             </thead>
@@ -46,13 +46,13 @@
                             </div>
                         </td>
                         <td>{{ tag.name }}</td>
-                        <td>
+                        <td class="text-center">
                             <span class="badge badge-pill"
                                   style="background-color:{{ tag.color }};
                                          margin-right: .25rem">&nbsp;</span>
                             <span class="font-monospace">{{ tag.color }}</span>
                         </td>
-                        <td>{{ tag.core_tagged_items__count }}</td>
+                        <td class="text-center">{{ tag.core_tagged_items__count }}</td>
                         <td>{{ tag.last_used }}</td>
                     </tr>
                 {% empty %}
