Finalize tag crud views

--- a/babybuddy/static_src/fontello/css/babybuddy-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-codes.css
@@ -21,6 +21,7 @@
 .icon-cancel:before { content: '\e813'; } /* '' */
 .icon-head-circumference:before { content: '\e814'; } /* '' */
 .icon-measurements:before { content: '\e815'; } /* '' */
+.icon-tag:before { content: '\e816'; } /* '' */
 .icon-height:before { content: '\f044'; } /* '' */
 .icon-dashboard:before { content: '\f0e4'; } /* '' */
 .icon-tummytime:before { content: '\f118'; } /* '' */
