--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?34831680');
-  src: url('../font/babybuddy.eot?34831680#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?34831680') format('woff2'),
-       url('../font/babybuddy.woff?34831680') format('woff'),
-       url('../font/babybuddy.ttf?34831680') format('truetype'),
-       url('../font/babybuddy.svg?34831680#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?34829963');
+  src: url('../font/babybuddy.eot?34829963#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?34829963') format('woff2'),
+       url('../font/babybuddy.woff?34829963') format('woff'),
+       url('../font/babybuddy.ttf?34829963') format('truetype'),
+       url('../font/babybuddy.svg?34829963#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?34831680#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?34829963#babybuddy') format('svg');
   }
 }
 */
@@ -76,6 +76,7 @@
 .icon-cancel:before { content: '\e813'; } /* '' */
 .icon-head-circumference:before { content: '\e814'; } /* '' */
 .icon-measurements:before { content: '\e815'; } /* '' */
+.icon-tag:before { content: '\e816'; } /* '' */
 .icon-height:before { content: '\f044'; } /* '' */
 .icon-dashboard:before { content: '\f0e4'; } /* '' */
 .icon-tummytime:before { content: '\f118'; } /* '' */
