Add tag filtering & proper sorting in tag lists

--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -15,6 +15,7 @@
             </a>
         {% endif %}
     </h1>
+    {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
         <table class="table table-instances table-borderless table-striped table-hover align-middle">
             <thead>
