--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -20,7 +20,7 @@
         <table class="table table-instances table-borderless table-striped table-hover align-middle">
             <thead>
                 <tr>
-                    <th>Actions</th>
+                    <th>{% trans "Actions" %}</th>
                     <th>{% trans "Name" %}</th>
                     <th class="text-center">{% trans "Color" %}</th>
                     <th class="text-center">{% trans "Items Tagged" %}</th>
