--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?34829963');
-  src: url('../font/babybuddy.eot?34829963#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?34829963') format('woff2'),
-       url('../font/babybuddy.woff?34829963') format('woff'),
-       url('../font/babybuddy.ttf?34829963') format('truetype'),
-       url('../font/babybuddy.svg?34829963#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?7641592');
+  src: url('../font/babybuddy.eot?7641592#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?7641592') format('woff2'),
+       url('../font/babybuddy.woff?7641592') format('woff'),
+       url('../font/babybuddy.ttf?7641592') format('truetype'),
+       url('../font/babybuddy.svg?7641592#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?34829963#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?7641592#babybuddy') format('svg');
   }
 }
 */
@@ -79,6 +79,10 @@
 .icon-tag:before { content: '\e816'; } /* '' */
 .icon-height:before { content: '\f044'; } /* '' */
 .icon-dashboard:before { content: '\f0e4'; } /* '' */
+.icon-angle-double-left:before { content: '\f100'; } /* '' */
+.icon-angle-double-right:before { content: '\f101'; } /* '' */
+.icon-angle-left:before { content: '\f104'; } /* '' */
+.icon-angle-right:before { content: '\f105'; } /* '' */
 .icon-tummytime:before { content: '\f118'; } /* '' */
 .icon-sad:before { content: '\f119'; } /* '' */
 .icon-source:before { content: '\f126'; } /* '' */
