--- a/static/babybuddy/css/app.css
+++ b/static/babybuddy/css/app.css
@@ -11935,6 +11935,10 @@ textarea.form-control-lg {
   color: #343a40;
 }
 
+.page-link-icon {
+  padding: var(--bs-pagination-padding-y) calc(var(--bs-pagination-padding-x) / 1.75);
+}
+
 #view-core\:child .child-photo {
   max-width: 150px;
 }
@@ -12185,8 +12189,8 @@ textarea.form-control-lg {
 
 @font-face {
   font-family: "babybuddy";
-  src: url("../font/babybuddy.eot?34829963");
-  src: url("../font/babybuddy.eot?34829963#iefix") format("embedded-opentype"), url("../font/babybuddy.woff2?34829963") format("woff2"), url("../font/babybuddy.woff?34829963") format("woff"), url("../font/babybuddy.ttf?34829963") format("truetype"), url("../font/babybuddy.svg?34829963#babybuddy") format("svg");
+  src: url("../font/babybuddy.eot?7641592");
+  src: url("../font/babybuddy.eot?7641592#iefix") format("embedded-opentype"), url("../font/babybuddy.woff2?7641592") format("woff2"), url("../font/babybuddy.woff?7641592") format("woff"), url("../font/babybuddy.ttf?7641592") format("truetype"), url("../font/babybuddy.svg?7641592#babybuddy") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -12196,7 +12200,7 @@ textarea.form-control-lg {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?34829963#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?7641592#babybuddy') format('svg');
   }
 }
 */
@@ -12303,6 +12307,18 @@ textarea.form-control-lg {
 .icon-dashboard:before {
   content: "\f0e4";
 } /* '' */
+.icon-angle-double-left:before {
+  content: "\f100";
+} /* '' */
+.icon-angle-double-right:before {
+  content: "\f101";
+} /* '' */
+.icon-angle-left:before {
+  content: "\f104";
+} /* '' */
+.icon-angle-right:before {
+  content: "\f105";
+} /* '' */
 .icon-tummytime:before {
   content: "\f118";
 } /* '' */
