Next Sleep dashboard widget

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -14,6 +14,7 @@
     <div id="dashboard-child"
          class="row"
          data-masonry='{"percentPosition": true }'>
+        <div class="col-sm-6 col-lg-4">{% card_next_sleep object %}</div>
         <div class="col-sm-6 col-lg-4">{% card_timer_list object %}</div>
         <div class="col-sm-6 col-lg-4">{% card_feeding_last object %}</div>
         <div class="col-sm-6 col-lg-4">{% card_diaperchange_last object %}</div>
