Add suggestions to the tag editor widget
When entering a tag suggestions based on the 256 most recently used tags
are suggested.
Suggestion list already exists in the TagsEditor class.
Uses HTML standard element datalist supported by most major browsers,
only firefox mobile lacks support at time of writing.

--- a/core/templates/core/widget_tag_editor.html
+++ b/core/templates/core/widget_tag_editor.html
@@ -22,7 +22,13 @@
             <input class="form-control"
                    type="text"
                    name=""
+                   list="tag-list"
                    placeholder="{% trans "Tag name" %}">
+            {% if widget.tag_suggestions.most %}
+                <datalist id="tag-list">
+                    {% for t in widget.tag_suggestions.most %}<option value="{{ t.name }}" />{% endfor %}
+                </datalist>
+            {% endif %}
             <button id="add-tag" class="btn btn-outline-primary bg" type="button">{% trans "Add" %}</button>
         </div>
         {% if widget.tag_suggestions.quick %}
